<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:paddingBottom="26dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_check_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/input_check_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/et_input_check_amount"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_tip_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_check_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/input_tip_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/et_tip_percentage"
                android:inputType="number"
                android:selectAllOnFocus="true"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
            android:id="@+id/calculation_outputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_tip_percentage">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/bill_amount"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="$20.00"/>

            <TextView
                    android:id="@+id/bill_amount_label"
                    android:text="@string/txt_for_bill_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Check"
                    android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/tip_amount"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="$1.50"/>

            <TextView
                    android:id="@+id/tip_amount_label"
                    android:text="@string/txt_for_tip_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Tip"
                    android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/grand_total"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="$21.50"/>

            <TextView
                    android:id="@+id/grand_total_label"
                    android:text="@string/txt_for_grand_total_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Total"
                    android:textAlignment="center"/>
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>